# OpenGL

./: CMakeLists.txt  CMakePresets.json  README.md
include/: Buffers.h
include/glad/: glad.h
libs/GLFW/: .project
libs/GLFW/docs/: .cproject
libs/GLFW/examples/: .cproject
libs/GLFW/tests/: .cproject
libs/glm/test/: .cproject
libs/glm/test/bug/: .cproject
libs/glm/test/ext/: .cproject
libs/glm/test/gtc/: .cproject
libs/glm/test/gtx/: .cproject
libs/glm/test/perf/: .cproject
shaders/: clock.frag  clock.vert  shape.frag  shape.vert
src/: Buffers.cpp  main.cpp
